--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,14 +23,16 @@ services:
     volumes:
       - ./node:/home/node/app
     working_dir: /home/node/app
-    environment:
     ports:
       - 8080:8080
-      #per una banda primer ho instal·lem tot amb npm ci que fa la instal·lació
-      #neta, i després executemn npm start per aixecar el nodejs
-      #ATENCIO, al package.json l'script start l'hem canviat pq. cridi a
-      #nodemon enlloc de node. D'aquesta forma detecta els canvis ens els 
-      #fitxers i recarrega el nodejs
+      
+      # Per una banda primer ho instal·lem tot amb npm ci que fa la instal·lació
+      # neta, i després executemn npm start per aixecar el nodejs
+      # ATENCIO, al package.json l'script start l'hem canviat pq. cridi a
+      # nodemon enlloc de node. D'aquesta forma detecta els canvis ens els 
+      # fitxers i recarrega el nodejs
+      # Per instal·lar nodemon: npm install --save-dev nodemon o directament al
+      # packages com a   "devDependencies": { "nodemon": "^3.0.3"}
     command: bash -c "npm ci && npm start"
 
   # Servidor web NGINX per servir els fitxers estàtics pel port 80
