--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,6 @@ services:
     working_dir: /home/node/app
     ports:
       - 8080:8080
-      
       # Per una banda primer ho instal·lem tot amb npm ci que fa la instal·lació
       # neta, i després executem npm start per aixecar el nodejs
       # ATENCIO, al package.json l'script start l'hem canviat pq. cridi a
@@ -35,19 +34,24 @@ services:
       # Per instal·lar nodemon: npm install --save-dev nodemon 
       # o directament al packages com a
       #   "devDependencies": { "nodemon": "^3.0.3"}
-    command: bash -c "npm ci && npm start"
+      #
+      #command: bash -c "npm ci && npm start"  #El primer cop que l'aixequem, per instal·lar-ho tot
+    command: bash -c "npm start"
 
   # Servidor web NGINX per servir els fitxers estàtics pel port 80
   # Serveix els fitxers de la carpeta "front" 
   nginx:
     image: nginx:1.25.3-alpine
     volumes:
+      #Directori Root
       - ./front:/usr/share/nginx/html
+      #Fitxer de configuració
+      - ./front/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
     depends_on:
       - node
-  
+
   laravel:
     #Tenim un dockerfile amb PHP i Composer i les utilitats de docker per php per aixecar un servidor Laravel
     build: ./back_laravel
@@ -56,7 +60,10 @@ services:
     volumes:
       - ./back_laravel:/var/www/
     working_dir: /var/www/
-    command: bash -c "composer install && echo '1' && echo 'php artisan el que necessitis' && echo '2' &&php artisan serve --host=0.0.0.0"    
+    #El primer cop que l'aixequem, per instal·lar-ho tot podriem fer
+    #command: bash -c "composer install && echo '1' && echo 'php artisan el que necessitis' && php artisan key:generate && echo '2' &&php artisan serve --host=0.0.0.0"
+    #la resta, quan ja tenim vendor, i key i migrate i seed... podriem fer directament
+    command: bash -c "php artisan serve --host=0.0.0.0"
 
   # Aplicació per accedir via web a la nostra base de dades, al port 9090
   adminer:
