--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -15,6 +15,7 @@ FROM nginx:1.25.3-alpine
 # Set the working directory to /app
 WORKDIR /usr/share/nginx/html
 
+#El docker compose segurament ho sobreescriurà
 COPY * .
 
 #expose port 8080 to the outside world
